--- a/config/config.cfg
+++ b/config/config.cfg
@@ -2,11 +2,11 @@
 subject = "VM1 test"
 message = "This is a test email."
 sender = "s3231174@student.rmit.edu.au"
-recipient = "jason.zhengxin@gmail.com"
+recipient = "recipient email addr"
 host = "smtp.gmail.com"
 port = 587
-username = "s3231174@student.rmit.edu.au"
-password = "W0rkfl0w5"
+username = "your email addr"
+password = "yourpass"
 
 [vars]
 USER_NAME	imacros
@@ -14,8 +14,8 @@ PASS_WORD	Wh1sp1r!
 USER_PASS	Wh1sp1r!
 USER_PASS1	Wh1sp1r2!
 USER_PASS2  Wh1sp1r3!
-EMAIL_USERNAME	imacroscontact
-EMAIL_PASSWORD	Whispir_2014!
+EMAIL_USERNAME	username
+EMAIL_PASSWORD	email password
 MAIL_SUBJ	VM7-IE9 iMacros Sanity Test Report
 APP_SERVER	https://app17web.dev1.whispir.net
 PORTAL_URL	https://test.app17web.dev1.whispir.net
