--- a/config/config.cfg
+++ b/config/config.cfg
@@ -1,7 +1,7 @@
 [email]
 subject = "VM1 test"
 message = "This is a test email."
-sender = "s3231174@student.rmit.edu.au"
+sender = "sender email addr"
 recipient = "recipient email addr"
 host = "smtp.gmail.com"
 port = 587
